dnl Process this file with autoconf to produce a configure script.
dnl	$NetBSD: configure.in,v 1.2 1994/12/02 00:43:27 phil Exp $
AC_INIT(bc.1)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_MINIX
AC_PROG_YACC
AC_PROG_LEX
if test "$LEX" = "flex" ; then
LEX="flex -I8"
fi
AC_PROG_INSTALL
AC_C_CONST
AC_TYPE_SIZE_T
dnl AC_PTRDIFF_T
AC_CHECK_HEADERS(stdarg.h stddef.h stdlib.h string.h limits.h unistd.h)
AC_CHECK_FUNCS(isgraph)
SaveCFLAGS="$CFLAGS"
CFLAGS="-g -O -I. -I$srcdir"
AC_MSG_CHECKING(if long strings are accepted by the C compiler)
AC_TRY_COMPILE([
char libmath[] = 
#include "libmath.h"
;
],[],AC_MSG_RESULT(yes),
AC_DEFINE(BC_MATH_FILE,"libmath.b")
AC_MSG_RESULT(no)
AC_MSG_WARN(libmath.b will not be preloaded into the executable))
CFLAGS="$SaveCFLAGS"
AC_OUTPUT(Makefile)

